updated code from beyond-owls

--- a/src/app/components/coin-details/coin-details.component.html
+++ b/src/app/components/coin-details/coin-details.component.html
@@ -29,13 +29,13 @@
 </div>
 <div *ngIf="allowed_user == false">
     <div style="font-size: 30px; margin-top: 21%; line-height: normal;" class="text-center mb-5">
-        AI will only be available to NFT holders and token stakers
+        AI will only be available to NFT holders.
         <div>
           <img class="sidebar-icon" src="https://bnb-grise-assests.s3.us-west-2.amazonaws.com/assets/dashboard.png" alt="dashboard">
           <br>
-          <div class="d-flex justify-content-center access-btn-div">
+          <!--<div class="d-flex justify-content-center access-btn-div">
             <span (click)="giveAccess()" class="access-btn">Access AI</span>
-          </div>
+          </div>-->
         </div>
     </div>
     <!-- <div style="font-size: 30px; margin-top: 21%;" class="text-center mb-5">
