--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -17,9 +17,7 @@
       </div>
       <div class="video_side_content">
         <div class="left-scroll text-left">
-
           <div class="home-logo">
-           
               <!-- <a routerLink="" class=""><img src="../assets/Green_logo.png"></a> -->
               <div class="heading_btn">
             <h1 class="nfsize">THE OWL STORY</h1>
@@ -28,7 +26,7 @@
             </a>
           </div>
             <p>This tale begins over 500 years ago where a mystical and magical mineral was consumed by 30 owls. After the ritual the owls began to gain an intelligence far exceeding anyone’s expectations, but there was more. The owls acquired supernatural strength, their physical bodies capable of awe-inspiring feats, they flew high above the sky, far beyond the eyes, higher and higher.</p>
-            <p>The owls were unstoppable, they were compelled to find a land so different to the one that they used to call home. That’s when they came upon the moon, a gray celestial body suspended in space with craters far as the eye could see. This would be home, a rearing ground, an owl’s dream for breeding. The original owls, the forefathers eventually disappeared, to a mythical land on the dark side of the moon where no one goes. However, their legacy remains, it still thrives 500 years later to this day as the population of the owls on the moon grew. Now 500 years later, there are over 500 owls that exist today that live on different lands on the moon.</p>
+            <p>The owls were unstoppable, they were compelled to find a land so different to the one that they used to call home. That’s when they came upon the moon, a gray celestial body suspended in space with craters far as the eye could see. This would be home, a rearing ground, an owl’s dream for breeding. The original owls, the forefathers eventually disappeared, to a mythical land on the dark side of the moon where no one goes. However, their legacy remains, it still thrives 500 years later to this day as the population of the owls on the moon grew. Now 500 years later, there are over 10,000 owls that exist today that live on different lands on the moon.</p>
               <p>The owls ferociously work from their lands releasing innovative and technologically advanced products from the ‘Owl Lab’ which are utilized by other owls on the moon so that they can flourish and succeed on their lands. It’s rumored that their greatest invention yet ‘The Owl Platform’ which is a price prediction platform for crypto currency, is soon to be released that will forever change the way moon trading works.</p>
               <p>This is the beginning, the first of many inventions to come from the owls who are advancing and innovating at an extraordinary rate. Be sure to check out the “The Owl Lab” for new, unique and ingenious releases from the owls.</p>
             <div class="text-center">
@@ -92,26 +90,26 @@
             </div>
           <div class="info-sec mb-4">
             
-            <h2 class="nfsize2">The Owls are working hard for you. Double the APYs for all NFT holders! Quantity (500)</h2>
+            <h2 class="nfsize2">The Owls are working hard for you.</h2>
             <div class="row align-items-center mb-2">
               <div class="col-md-12">
                 <div class="row">
                   <div class="col-md-4 mb-3">
-                    <img src="assets/thumb_1.jpg" class="img-responsive"/>
+                    <img src="assets/dekala-owl/1.png" class="img-responsive"/>
                   </div>
                    <div class="col-md-4 mb-3">
-                    <img src="assets/thumb_3.jpg" class="img-responsive"/>
+                    <img src="assets/dekala-owl/2.png" class="img-responsive"/>
                   </div>
                   <div class="col-md-4 mb-3">
-                    <img src="assets/thumb_2.jpg" class="img-responsive"/>
+                    <img src="assets/dekala-owl/3.png" class="img-responsive"/>
                   </div>
                  
                 </div>
               </div>
             </div>
-            <div class="info-sec mb-4">
+            <!--<div class="info-sec mb-4">
               
-              <!-- <div class="row align-items-center">
+              &lt;!&ndash; <div class="row align-items-center">
                 <div class="col-md-4">
                   <div class="row align-items-center">
                     <div class="col-md-4 mb-3">
@@ -135,7 +133,7 @@
                   </div>
                   <span class="legnd-text">Rare</span>
                 </div>
-              </div> -->
+              </div> &ndash;&gt;
               <div  class="row align-items-center">
                 <div  class="col-md-4">
                   <div  class="row align-items-center">
@@ -163,7 +161,7 @@
                 </div>
                 
               </div>
-            </div>
+            </div>-->
           </div>
           <!-- <div class="info-sec mb-4">
             <h2 class="nfsize2">Mythic: qty 30</h2>
@@ -180,7 +178,7 @@
               </div>
             </div>
           </div> -->
-          <div  class="info-sec mb-4">
+          <!--<div  class="info-sec mb-4">
             <div  class="row align-items-center">
               <div  class="col-md-12">
                 <div  class="row align-items-center">
@@ -194,7 +192,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div>-->
           <!-- <div class="info-sec mb-4">
             <div class="d-flex justify-content-start align-items-center flex-column policy-ids">
               <h3 class="mb-0">Verified by <a href="https://cnft.io/" target="_blank" class="text-white"><u>cnft.io</u> </a></h3>
