--- a/src/app/components/token-metrix/token-metrix.component.html
+++ b/src/app/components/token-metrix/token-metrix.component.html
@@ -346,7 +346,7 @@
 </div> 
 <div *ngIf="allowed_user == false">
   <div style="font-size: 30px; margin-top: 21%; line-height: normal; padding:0px 10px;" class="text-center mb-5">
-    AI will only be available to NFT holders and token stakers. 
+    AI will only be available to NFT holders.
     <div>
       <img class="sidebar-icon" src="https://bnb-grise-assests.s3.us-west-2.amazonaws.com/assets/dashboard.png" alt="dashboard">
       <br>
