assets root path updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -100,7 +100,7 @@
           >
           <span  class="d-flex align-items-center" *ngIf="!walletAddr">Connect Wallet</span>
     <span  class="d-flex align-items-center" *ngIf="walletAddr"> {{ walletAddr }} <span class="cardino-icon" *ngIf="walletAddr"><img
-      src="../assets/cardano-white.png"
+      src="assets/cardano-white.png"
 
     /></span> </span>
 
@@ -122,17 +122,17 @@
           *ngIf="walletAddr"
         >
 
-          <span><img src="../assets/NFT_Icon.png"></span>
+          <span><img src="assets/NFT_Icon.png"></span>
         <span>My Nfts</span>
         </button>
 
       <button class="top_button" (click)="connectWithCardanoWallet()" [ngClass]="{ 'notallowed' : walletAddr }">
-         <span><img src="../assets/nami-icon2.svg"></span>
+         <span><img src="assets/nami-icon2.svg"></span>
         <span>Nami Wallet</span>
       </button>
 
         <button class="top_button d-inline-flex" (click)="connectCCVault()">
-        <span><img src="../assets/ccvault.png"></span>
+        <span><img src="assets/ccvault.png"></span>
         <span>Eternl Wallet <br> Coming Soon</span>
 
 
@@ -206,7 +206,7 @@
           >
             <img
               class="sidebar-icon"
-              src="../assets/NFT.png"
+              src="assets/NFT.png"
               alt="reservation"
             />
             <br />
@@ -222,7 +222,7 @@
           >
             <img
               class="sidebar-icon"
-              src="../assets/tokeninfo.png"
+              src="assets/tokeninfo.png"
               alt="tokeninfo"
             />
             <br />
@@ -255,7 +255,7 @@
           >
             <img
               class="sidebar-icon"
-              src="../assets/vaultz.png"
+              src="assets/vaultz.png"
               alt="cryptometrix"
             />
             <br />
@@ -325,7 +325,7 @@
           >
             <img
               class="sidebar-icon"
-              src="../assets/owly_bird.png"
+              src="assets/owly_bird.png"
               alt="owly_bird"
             />
             <br />
@@ -343,7 +343,7 @@
           >
             <img
               class="sidebar-icon"
-              src="../assets/vaultz.png"
+              src="assets/vaultz.png"
               alt="cryptometrix"
             />
             <br />
@@ -376,7 +376,7 @@
          <video class="logo_video"  autoplay loop>
           <source src="https://bnb-grise-assests.s3.us-west-2.amazonaws.com/assets/logo_render_20_percent_v2.mp4" type="video/mp4">
 
-          </video>         <img class="logo_video" src="../assets/owl_logo_new_02.png" />
+          </video>         <img class="logo_video" src="assets/owl_logo_new_02.png" />
       </a>
     </span> -->
     <span  class="grise"><a  routerlink="" href="#/"><img  src="https://www.linkpicture.com/q/owl_logo_new_02-1.png" class="logo_video"></a></span>
@@ -424,7 +424,7 @@
           <div class="icon_setting">
             <img
               style="padding: 3px"
-              src="../assets/dot_logo.png"
+              src="assets/dot_logo.png"
               width="27px"
               height="27px"
             />
@@ -553,7 +553,7 @@
         <div style="width: 2%; font-size: 30px; margin-top: 6%">|</div>
         <div style="width: 49%; display: flex; margin-right: 20px">
           <img
-            src="../assets/logo-white.png"
+            src="assets/logo-white.png"
             alt="logo"
             style="
               height: 30px;
@@ -664,7 +664,7 @@
     >
     <span  class="d-flex align-items-center" *ngIf="!walletAddr">Connect Wallet</span>
     <span  class="d-flex align-items-center" *ngIf="walletAddr"> {{ walletAddr }} <span class="cardino-icon" *ngIf="walletAddr"><img
-      src="../assets/cardano-white.png"
+      src="assets/cardano-white.png"
 
     /></span> </span>
 
@@ -678,17 +678,17 @@
           *ngIf="walletAddr"
         >
 
-          <span><img src="../assets/NFT_Icon.png"></span>
+          <span><img src="assets/NFT_Icon.png"></span>
         <span>My Nfts</span>
         </button>
 
       <button class="top_button" (click)="connectWithCardanoWallet()" [ngClass]="{ 'notallowed' : walletAddr }">
-         <span><img src="../assets/nami-icon2.svg"></span>
+         <span><img src="assets/nami-icon2.svg"></span>
         <span>Nami Wallet</span>
       </button>
 
       <button class="top_button d-inline-flex disable" disabled>
-        <span><img src="../assets/ccvault.png"></span>
+        <span><img src="assets/ccvault.png"></span>
         <span>Eternl Wallet <br> (Coming Soon)</span>
 
 
@@ -768,7 +768,7 @@
           routerLink="/home"
           queryParamsHandling="merge"
         >
-          <img class="sidebar-icon" src="../assets/home.png" alt="home" />
+          <img class="sidebar-icon" src="assets/home.png" alt="home" />
           <br />
           <label class="mb-0 app-item-text">Home</label>
         </a>
@@ -790,7 +790,7 @@
 
 
         <!-- <a routerLinkActive="active" routerLink="tokeninfo" queryParamsHandling="merge">
-          <img class="sidebar-icon" src="../assets/tokeninfo.png" alt="tokeninfo">
+          <img class="sidebar-icon" src="assets/tokeninfo.png" alt="tokeninfo">
           <br>
           <label class="mb-0 app-item-text">Token info</label>
         </a> -->
@@ -800,7 +800,7 @@
           routerLink="/nft"
           queryParamsHandling="merge"
         >
-          <img class="sidebar-icon" src="../assets/NFT.png" alt="NFT" />
+          <img class="sidebar-icon" src="assets/NFT.png" alt="NFT" />
           <br />
           <label class="mb-0 app-item-text">NFT</label>
         </a> -->
@@ -812,7 +812,7 @@
         >
           <img
             class="sidebar-icon"
-            src="../assets/NFT.png"
+            src="assets/NFT.png"
             alt="reservation"
           />
           <br />
@@ -825,7 +825,7 @@
           routerLink="/roadmap"
           queryParamsHandling="merge"
         >
-          <img class="sidebar-icon" src="../assets/vaultz.png" alt="vaultz" />
+          <img class="sidebar-icon" src="assets/vaultz.png" alt="vaultz" />
           <br />
           <label class="mb-0 app-item-text">Roadmap</label>
         </a> -->
@@ -838,7 +838,7 @@
         >
           <img
             class="sidebar-icon"
-            src="../assets/dashboard.png"
+            src="assets/dashboard.png"
             alt="dashboard"
           />
           <br />
@@ -847,7 +847,7 @@
 
         <div [ngClass]="{activeDropdown: dropdownActive,notActiveDropdown: dropdownNotActive}" class="sidebar-dropdown">
           <a routerLinkActive="active" routerLink="/AI" queryParamsHandling="merge">
-            <img class="sidebar-icon" src="../assets/AI-Cryptokenomics.png" alt="cryptometrix">
+            <img class="sidebar-icon" src="assets/AI-Cryptokenomics.png" alt="cryptometrix">
             <br>
             <label class="mb-0 app-item-text">AI</label>
           </a>
@@ -874,7 +874,7 @@
       >
         <img
           class="sidebar-icon"
-          src="../assets/tokenstat.png"
+          src="assets/tokenstat.png"
           alt="tokenstats"
         />
         <br />
@@ -889,7 +889,7 @@
       >
         <img
           class="sidebar-icon"
-          src="../assets/owly_bird.png"
+          src="assets/owly_bird.png"
           alt="owly_bird"
         />
         <br />
@@ -902,7 +902,7 @@
         >
           <img
             class="sidebar-icon"
-            src="../assets/AI-Cryptokenomics.png"
+            src="assets/AI-Cryptokenomics.png"
             alt="cryptometrix"
           />
           <br />
@@ -915,7 +915,7 @@
           routerLink="/merge"
           queryParamsHandling="merge"
         >
-          <img class="sidebar-icon" src="../assets/vaultz.png" alt="Merge" />
+          <img class="sidebar-icon" src="assets/vaultz.png" alt="Merge" />
           <br />
           <label class="mb-0 app-item-text">Merge</label>
         </a> -->
@@ -926,7 +926,7 @@
         >
           <img
             class="sidebar-icon"
-            src="../assets/vaultz.png"
+            src="assets/vaultz.png"
             alt="Landing Page"
           />
           <br />
