--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -707,23 +707,23 @@ mat-button:hover {
     height: 40px;
   }
 }
-.telegram-icon {
-  background-image: url("../assets/telegram-logo.png");
-}
-.twiter-logo {
-  background-image: url("../assets/twitter-logo.jpg");
-}
+// .telegram-icon {
+//   background-image: url("assets/telegram-logo.png");
+// }
+// .twiter-logo {
+//   background-image: url("assets/twitter-logo.jpg");
+// }
 
-.medium-logo {
-  background-image: url("../assets/medium-logo.png");
-}
+// .medium-logo {
+//   background-image: url("assets/medium-logo.png");
+// }
 
-.reddit-logo {
-  background-image: url("../assets/reddit-logo.jpg");
-}
-.discord-logo {
-  background-image: url("../assets/discord-logo.jpg");
-}
+// .reddit-logo {
+//   background-image: url("assets/reddit-logo.jpg");
+// }
+// .discord-logo {
+//   background-image: url("assets/discord-logo.jpg");
+// }
 
 .nami-icon {
   background-image: url("../assets/nami-icon.svg");
