--- a/src/app/components/dashboard/liquidity/liquidity.component.html
+++ b/src/app/components/dashboard/liquidity/liquidity.component.html
@@ -1,7 +1,7 @@
 <div style="background-color: rgb(59, 65, 72); height: 100%;">
 
   <div class="personal header_div">
-    <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+    <!-- <img style="width: 250px" src="assets/logo.png"> -->
     <i class="fas fa-coins personal_icon header_icon"></i>
     <label class="personal_title header_title">Liquidity Event</label>
   </div>
@@ -18,7 +18,7 @@
           <!-- <i class="fab fa-bandcamp" style="font-size: 30px;color: white"></i> -->
           <button class="ether">
             <!-- <i class="fab fa-ethereum" style="font-size: 30px"></i> -->
-            <img src="../assets/bnb-black.png" alt="logo" style="height: 30px; width: 30px;">
+            <img src="assets/bnb-black.png" alt="logo" style="height: 30px; width: 30px;">
           </button>
 
           <span class="digit liq_time">{{ liquidityEventData?.totalInvestment | number:'1.0-5' }} BNB</span>
