--- a/src/app/components/dashboard/refund-history/refund-history.component.html
+++ b/src/app/components/dashboard/refund-history/refund-history.component.html
@@ -1,7 +1,7 @@
 <div style="background-color: rgb(59, 65, 72);">
 
   <div class="personal header_div">
-    <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+    <!-- <img style="width: 250px" src="assets/logo.png"> -->
     <i class="fas fa-gas-pump personal_icon header_icon"></i>
     <label class="personal_title header_title">Gas Refund</label>
   </div>
@@ -19,7 +19,7 @@
         <div class="timebox">
           <span class="value">
             <button class="ether">
-              <img src="../assets/bnb-black.png" alt="logo" style="height: 30px; width: 30px;">
+              <img src="assets/bnb-black.png" alt="logo" style="height: 30px; width: 30px;">
             </button>
             <span class="digit">{{ refundHistoryData?.sponsoredAmount | number:'1.0-5' }} BNB</span>
           </span>
@@ -35,7 +35,7 @@
         <div class="timebox">
           <span class="value">
             <button class="ether">
-              <img src="../assets/bnb-black.png" alt="logo" style="height: 30px; width: 30px;">
+              <img src="assets/bnb-black.png" alt="logo" style="height: 30px; width: 30px;">
             </button>
             <span class="digit">{{ refundHistoryData?.myRefundAmount | number:'1.0-5' }} BNB</span>
           </span>
