--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1244,7 +1244,7 @@
           >
             <div
               class="favourite-model-profile"
-              style="background-image: url('../../../assets/rare/r1.png')"
+              style="background-image: url('assets/rare/r1.png')"
             ></div>
             <div class="d-flex flex-column ml-5">
               <h4 class="mb-0 text-left">NFT Name</h4>
@@ -1257,7 +1257,7 @@
           >
             <div
               class="favourite-model-profile"
-              style="background-image: url('../../../assets/rare/r2.png')"
+              style="background-image: url('assets/rare/r2.png')"
             ></div>
             <div class="d-flex flex-column ml-5">
               <h4 class="mb-0 text-left">NFT Name2</h4>
@@ -1270,7 +1270,7 @@
           >
             <div
               class="favourite-model-profile"
-              style="background-image: url('../../../assets/rare/r3.png')"
+              style="background-image: url('assets/rare/r3.png')"
             ></div>
             <div class="d-flex flex-column ml-5">
               <h4 class="mb-0 text-left">NFT Name3</h4>
@@ -1283,7 +1283,7 @@
           >
             <div
               class="favourite-model-profile"
-              style="background-image: url('../../../assets/rare/r4.png')"
+              style="background-image: url('assets/rare/r4.png')"
             ></div>
             <div class="d-flex flex-column ml-5">
               <h4 class="mb-0 text-left">NFT Name</h4>
