--- a/src/app/components/nft-collection/nft-collection.component.html
+++ b/src/app/components/nft-collection/nft-collection.component.html
@@ -64,7 +64,7 @@
                             <img
                             class="img-responsive nft-img"
                             alt="NFTs"
-                            src="../../../assets/dekala-owl/1.png"
+                            src="assets/dekala-owl/1.png"
                             loading="lazy"
                         />
                         </div>
@@ -82,7 +82,7 @@
                                 <img
                                 class="img-responsive nft-img"
                                 alt="NFTs"
-                                src="../../../assets/beyond_deed.jpg"
+                                src="assets/beyond_deed.jpg"
                             />
                             </div>
 
@@ -99,7 +99,7 @@
                                 <img
                                 class="img-responsive nft-img"
                                 alt="NFTs"
-                                src="../../../assets/legend/dropping_soon.gif"
+                                src="assets/legend/dropping_soon.gif"
                             />
                             </div>
                         </a>
@@ -124,7 +124,7 @@
                             <img
                             class="img-responsive nft-img"
                             alt="NFTs"
-                            src="../../../assets/cross.png"
+                            src="assets/cross.png"
                         />
                         </div>
 
