--- a/src/app/components/nft/nft.component.html
+++ b/src/app/components/nft/nft.component.html
@@ -72,7 +72,7 @@
                  <div  class="col-md-4 col-lg-6">
                     <span >
                        <h5 > Acquire GRISE NFT</h5>
-                       <a  href="../../..//assets/How-To-Acquire-GRSE-NFTs-November-2021.pdf" target="_blank"><img src="../../../assets/How_To_Acquire_GRISE_NFT.png" class="img-responsive" style="border-radius: 10px;"></a>
+                       <a  href="../../..//assets/How-To-Acquire-GRSE-NFTs-November-2021.pdf" target="_blank"><img src="assets/How_To_Acquire_GRISE_NFT.png" class="img-responsive" style="border-radius: 10px;"></a>
                     </span>
                  </div>
               </div>
@@ -190,7 +190,7 @@
          <div class="tab tab--keyNft flex-column align-items-center" style="min-height: 20px;">
             
             
-            <img src="../../../assets/key.gif" height="309px"/>
+            <img src="assets/key.gif" height="309px"/>
             <div class="d-flex justify-content-between align-items-center nftcolumn">
              <a
            href="javascript:void(0)"
@@ -232,7 +232,7 @@
          <div class="tab tab--keyNft flex-column align-items-center" style="min-height: 20px;">
             
             <!-- <img [src]="keyitem.src" height="309px"/> -->
-            <img src="../../../assets/key/GRISEKEY2021.gif" height="309px"/>
+            <img src="assets/key/GRISEKEY2021.gif" height="309px"/>
             <!-- <div class="d-flex justify-content-between align-items-center nftcolumn">
              <a
            href="javascript:void(0)"
@@ -297,7 +297,7 @@
 </div>
 <div class="col-lg-9 col-md-12 tokeninfo-second" *ngIf="incubationText">
   <div class="scrollable-title-container">
-     <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+     <!-- <img style="width: 250px" src="assets/logo.png"> -->
      <!-- <i class="fas fa-coins"></i> -->
      <label class="scrollable-title"
         >NFT Market Place</label
@@ -420,58 +420,58 @@
            <div class="modal-body-inner d-flex" *ngIf="firstBox">
               <div class="modal-body-img-box">
                  
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
                  
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
                 
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
            
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
                 
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
            </div>
            <div class="modal-body-inner d-flex" *ngIf="nextBox">
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
               <div class="modal-body-img-box">
-                 <img src="../../../assets/cross.png">
+                 <img src="assets/cross.png">
               </div>
            </div>
            <div class="successBox" *ngIf="resultBox">
