--- a/src/app/components/reservation/reservation.component.html
+++ b/src/app/components/reservation/reservation.component.html
@@ -25,7 +25,7 @@
     <div class="col-lg-12 reservation-second">
         <!-- <h1 class="reservation-title"></h1> -->
         <div class=" personal">
-            <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+            <!-- <img style="width: 250px" src="assets/logo.png"> -->
             <!-- <i class="fas fa-coins personal_icon"></i> -->
             <label class="personal_title">Grise Token Reservation</label>
         </div>
@@ -92,7 +92,7 @@
 
                                     <!-- <button style="background-color: transparent;border: none;" data-toggle="modal"
                                         data-target="#exampleModal">
-                                        <img style="width: 10%;border-radius: 50%;" src="../../../assets/NFT_Icon.png">
+                                        <img style="width: 10%;border-radius: 50%;" src="assets/NFT_Icon.png">
                                     </button> -->
 
 
