--- a/src/app/components/tokeninfo/tokeninfo.component.html
+++ b/src/app/components/tokeninfo/tokeninfo.component.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-lg-12 tokeninfo-second" id="Overview">
             <!-- <div class="personal"> -->
-                <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+                <!-- <img style="width: 250px" src="assets/logo.png"> -->
                 <!-- <i class="fas fa-coins"></i> -->
                 <!-- <h1 class="personal_title">Token Info</h1> -->
 
@@ -388,7 +388,7 @@
                     <a class="github" href="https://github.com/" target="_blank"><i class="fab fa-github"></i></a>
                   </div>
                 <div class="grise">
-                    <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+                    <!-- <img style="width: 250px" src="assets/logo.png"> -->
                     <span >
                         Copyright © 2021–2022 — Grise, LLC<br>
                         ALL RIGHTS RESERVED
