--- a/src/app/components/coming-soon/coming-soon.component.html
+++ b/src/app/components/coming-soon/coming-soon.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="col-lg-12 tokeninfo-second" id="Overview">
             <div class="personal">
-                <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+                <!-- <img style="width: 250px" src="assets/logo.png"> -->
                 <!-- <i class="fas fa-coins"></i> -->
                 <!-- <h1 class="personal_title" style="padding-left: 25%;">NFT</h1> -->
 
