--- a/src/app/components/dashboard/personal/personal.component.html
+++ b/src/app/components/dashboard/personal/personal.component.html
@@ -425,7 +425,7 @@
       </button>
     </div>
     <div class="grise">
-      <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+      <!-- <img style="width: 250px" src="assets/logo.png"> -->
     </div>
   </div>
 </div>
