--- a/src/app/components/dashboard/reward/reward.component.html
+++ b/src/app/components/dashboard/reward/reward.component.html
@@ -2,7 +2,7 @@
 <div style="background-color: rgb(59, 65, 72); height: 100%;">
        
       <div  class="personal header_div">
-        <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+        <!-- <img style="width: 250px" src="assets/logo.png"> -->
         <i class="fas fa-crown personal_icon header_icon"></i>
         <label class="personal_title header_title">Token Holder Reward</label>
       </div>
@@ -19,7 +19,7 @@
                         <!-- <i class="fab fa-bandcamp" style="font-size: 30px;color: white"></i> -->
                         <button class="ether">
                             <!-- <i class="fab fa-ethereum" style="font-size: 30px"></i> -->
-                            <img src="../assets/logo-black.png" alt="logo" style="height: 30px; width: 30px;">
+                            <img src="assets/logo-black.png" alt="logo" style="height: 30px; width: 30px;">
                         </button>
                         
                         <span class="digit">{{ (rewardToken ? rewardToken : 0) | number:'1.0-2' }} Grise</span>
@@ -56,7 +56,7 @@
           <footer>
             <div class="grise">
               
-              <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+              <!-- <img style="width: 250px" src="assets/logo.png"> -->
             </div>
           </footer>
        
