--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,11 +5,11 @@
       <!-- <div class="col-lg-12 "> -->
       <div class="w-100 h_custom_100 position-relative">
         <video loop muted autoplay class="homeBgVideo" oncanplay="this.play()" onloadedmetadata="this.muted = true">
-          <source src="../../../assets/homepage-new.mp4" type="video/mp4" />
+          <source src="assets/homepage-new.mp4" type="video/mp4" />
         </video>
 
         <a
-          href="../../../assets/website-terms-grise.pdf"
+          href="assets/website-terms-grise.pdf"
           target="_blank"
           class="disclamir-btn tealcolor btn"
           >Disclosure</a
@@ -18,7 +18,7 @@
       <div class="video_side_content">
         <div class="left-scroll text-left">
           <div class="home-logo">
-              <!-- <a routerLink="" class=""><img src="../assets/Green_logo.png"></a> -->
+              <!-- <a routerLink="" class=""><img src="assets/Green_logo.png"></a> -->
               <div class="heading_btn">
             <h1 class="nfsize">THE OWL STORY</h1>
             <a class="btn btn-primary pancakeswap" href="assets/Beyond-Owls-White-Paper.pdf" target="_blank">
@@ -197,13 +197,13 @@
             <div class="d-flex justify-content-start align-items-center flex-column policy-ids">
               <h3 class="mb-0">Verified by <a href="https://cnft.io/" target="_blank" class="text-white"><u>cnft.io</u> </a></h3>
               <span>
-                <img src="../../../assets/yellow-batch.svg" class="batchicon"/>
+                <img src="assets/yellow-batch.svg" class="batchicon"/>
               </span>
             </div>
             <div class="d-flex justify-content-start align-items-center flex-column policy-ids">
               <h3 class="mb-0">Verified by <a href="https://www.jpg.store/" target="_blank" class="text-white"><u>jpeg.store</u> </a></h3>
               <span>
-                <img src="../../../assets/blue-batch.svg" class="batchicon"/>
+                <img src="assets/blue-batch.svg" class="batchicon"/>
               </span>
             </div>
           </div> -->
@@ -226,7 +226,7 @@
           
         </div>
           <div class="d-flex justify-content-center">
-            <img src="../../../assets/grise-moonmap.png" class="img-responsive roadmapimage" />
+            <img src="assets/grise-moonmap.png" class="img-responsive roadmapimage" />
           </div>  
           </div> -->
         <!-- <h2 class="home_text mb-0">Welcome to</h2>
@@ -308,7 +308,7 @@
             >
               <img
                 class="twitter-share-button-img"
-                src="../assets/twit.png"
+                src="assets/twit.png"
               />Tweet</a
             >
           </div>
