--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -240,7 +240,7 @@ button {
 }
 .twitter-share-button-img {
   content: "";
-  // background: url(../assets/twit.png);
+  // background: url(assets/twit.png);
   height: 13px;
   width: 20px;
   display: inline-block;
