--- a/src/app/components/my-nfts/my-nfts.component.html
+++ b/src/app/components/my-nfts/my-nfts.component.html
@@ -4,7 +4,7 @@
   
       <div class="col-lg-12 col-md-12 tokeninfo-second">
         <div class="scrollable-title-container">
-          <!-- <img style="width: 250px" src="../../../assets/logo.png"> -->
+          <!-- <img style="width: 250px" src="assets/logo.png"> -->
           <!-- <i class="fas fa-coins"></i> -->
           <label class="scrollable-title mb-5">My NFT's</label>
         </div>
@@ -38,7 +38,7 @@
                 (click)="redirectlandingPage(nftContent.nftObj)"
                 /> -->
 
-                <img *ngIf="!spinnerLoader" src="../../../assets/wait-loader.gif" class="loader-image">
+                <img *ngIf="!spinnerLoader" src="assets/wait-loader.gif" class="loader-image">
                 <img *ngIf="!nftContent.src" [hidden]="!spinnerLoader" [src]="nftContent.contentPath" (load)="spinnerLoader = true" class="img-responsive nft-img" (click)="redirectlandingPage(nftContent.nftObj)">
                 <img *ngIf="nftContent.src" [hidden]="!spinnerLoader" [src]="nftContent.src" (load)="spinnerLoader = true" class="img-responsive nft-img" (click)="redirectlandingPage(nftContent.nftObj)">
 
@@ -73,7 +73,7 @@
                     <img
                   class="img-responsive nft-img"
                   alt="NFTs"
-                  src="../../../assets/rare.png"
+                  src="assets/rare.png"
                 />
                 <div class="d-flex justify-content-between align-items-center nftcolumn ">
                   <a
@@ -96,7 +96,7 @@
                     <img
                   class="img-responsive nft-img"
                   alt="NFTs"
-                  src="../../../assets/rare.png"
+                  src="assets/rare.png"
                 />
                 <div class="d-flex justify-content-between align-items-center nftcolumn ">
                   <a
