--- a/src/app/components/owly-bird/owly-bird.component.scss
+++ b/src/app/components/owly-bird/owly-bird.component.scss
@@ -133,7 +133,7 @@ button {
 }
 .twitter-share-button-img {
   content: "";
-  // background: url(../assets/twit.png);
+  // background: url(assets/twit.png);
   height: 13px;
   width: 20px;
   display: inline-block;
@@ -323,7 +323,7 @@ button {
   width: 100%;
   height: 100%;
   background-size: cover;
-  // background-image: url("../../../assets/Moon-map.jpg");
+  // background-image: url("assets/Moon-map.jpg");
 }
 
 .leftsidebar-container {
