--- a/src/app/components/roadmap/roadmap.component.scss
+++ b/src/app/components/roadmap/roadmap.component.scss
@@ -369,7 +369,7 @@ div {
   justify-content: center;
   border-radius: 50%;
   background-size: cover;
-  background-image: url("../../../assets/medium-logo.png");
+  background-image: url("assets/medium-logo.png");
   @media (max-width: 575px) {
     margin-left: 0 !important;
   }
