--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,7 @@ body {
   @media (min-width: 992px) {
     background-color: rgb(59, 65, 72);
   }
+
   padding-left: 5%;
   //margin-left: -4%;
   z-index: 100;
@@ -120,6 +121,7 @@ button:focus,
 ::-webkit-scrollbar {
   width: 8px;
 }
+
 .cdk-overlay-pane {
   margin-right: 40px;
 }
@@ -140,6 +142,16 @@ button:focus,
   padding-top: 125px;
 }
 
+.bg-color {
+  min-height: 100%;
+  max-width: 100%;
+  background-color: #3b4148;
+}
+
+.bg-gradient {
+  background: linear-gradient(89.02deg, #6226d9 0.89%, #8c52ff 100%) !important;
+}
+
 @media (max-width: 992px) {
   .sub-end-part {
     padding-top: 10px;
@@ -150,6 +162,7 @@ button:focus,
   .nftmodal {
     display: block !important;
   }
+
   .modal_nft_img {
     text-align: center;
   }
@@ -169,6 +182,7 @@ button:focus,
   margin-left: 7px;
   padding-left: 17px;
 }
+
 .header_div {
   padding-bottom: 0px;
 }
@@ -187,9 +201,11 @@ button:focus,
   .header_div {
     display: block !important;
   }
+
   .personaltd {
     width: 37%;
   }
+
   .personaltd1 {
     width: 100%;
   }
@@ -200,6 +216,7 @@ button:focus,
     height: 3.2em !important;
   }
 }
+
 @media (min-width: 1441px) {
   .header_icon {
     height: 3.9em !important;
@@ -211,6 +228,7 @@ button:focus,
     margin-left: -3%;
   }
 }
+
 @media (min-width: 1025px) {
   .header_div {
     margin-left: -5%;
@@ -231,6 +249,7 @@ button:focus,
   @media (min-width: 992px) {
     background-color: rgb(59, 65, 72);
   }
+
   @media (max-width: 992px) {
     padding-top: 0;
   }
@@ -251,32 +270,38 @@ button:focus,
     font-size: 20px;
   }
 }
+
 /* Importing Bootstrap SCSS file. */
 @import "~bootstrap/scss/bootstrap";
 
 /* Importing Datepicker SCSS file. */
 @import "~ngx-bootstrap/datepicker/bs-datepicker";
+
 .active-tab {
   background: #0096a1 !important;
   background-color: #0096a1 !important;
   border-color: #0096a1 !important;
 }
+
 .tab {
   @media (max-width: 575px) {
     width: 90% !important;
     margin-left: 5% !important;
     margin-right: 5% !important;
   }
+
   @media (min-width: 576px) and (max-width: 991px) {
     width: 100% !important;
   }
 }
+
 .custumspinner {
   height: 33px;
   font-size: 0px !important;
   cursor: not-allowed !important;
   // opacity: 0.5;
 }
+
 .custumspinner:before {
   content: "";
   box-sizing: border-box;
@@ -292,11 +317,13 @@ button:focus,
   border-top-color: #000000;
   animation: custumspinner 0.8s linear infinite;
 }
+
 @keyframes custumspinner {
   to {
     transform: rotate(360deg);
   }
 }
+
 .title-tripy {
   padding: 0px 40px;
 }
@@ -318,11 +345,11 @@ button:focus,
 .icon-container {
   min-width: 5em;
 }
-#wallet-options {
 
-}
+#wallet-options {}
+
 .mat-list-option:hover {
-  background-color: rgba(255,255,255,0.25);
+  background-color: rgba(255, 255, 255, 0.25);
 }
 
 .wallet {
@@ -338,11 +365,13 @@ button:focus,
 .md-aptos-wallet {
   display: none;
 }
+
 @media (max-width: 1439px) and (min-width: 992px) {
   .aptos-caption {
     visibility: hidden;
     //display: none !important;
   }
+
   .md-aptos-wallet {
     display: flex !important;
   }
